<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WorkoutFormFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/workout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/current_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_date"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="370dp"
                android:layout_height="455dp"
                android:layout_marginStart="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/body_weight_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/body_weight"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/user_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="175dp"
                        android:layout_toEndOf="@+id/body_weight_label"
                        android:hint="@string/sample_weight"
                        android:inputType="number" />

                    <Spinner
                        android:id="@+id/pull_progressions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/body_weight_label"
                        android:layout_marginTop="30dp" />

                    <EditText
                        android:id="@+id/pull_set_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pull_progressions"
                        android:inputType="number"
                        android:hint="8"
                        android:layout_marginStart="30dp"/>
                    <EditText
                        android:id="@+id/pull_set_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pull_progressions"
                        android:layout_toEndOf="@+id/pull_set_1"
                        android:inputType="number"
                        android:hint="8"
                        android:layout_marginStart="30dp"/>
                    <EditText
                        android:id="@+id/pull_set_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pull_progressions"
                        android:layout_toEndOf="@+id/pull_set_2"
                        android:inputType="number"
                        android:hint="8"
                        android:layout_marginStart="30dp"/>

                    <Spinner
                        android:id="@+id/squat_progressions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pull_set_1"
                        android:layout_marginTop="30dp" />


                    <EditText
                        android:id="@+id/squat_set_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/squat_progressions"
                        android:inputType="number"
                        android:hint="8"
                        android:layout_marginStart="30dp"/>
                    <EditText
                        android:id="@+id/squat_set_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/squat_progressions"
                        android:layout_toEndOf="@+id/squat_set_1"
                        android:inputType="number"
                        android:hint="8"
                        android:layout_marginStart="30dp"/>
                    <EditText
                        android:id="@+id/squat_set_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/squat_progressions"
                        android:layout_toEndOf="@+id/squat_set_2"
                        android:inputType="number"
                        android:hint="8"
                        android:layout_marginStart="30dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="370dp"
                android:layout_height="450dp"
                android:layout_marginStart="10dp">

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="370dp"
                android:layout_height="450dp"
                android:layout_marginStart="10dp">

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="370dp"
                android:layout_height="450dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/save_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/finish_workout"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
        app:layout_constraintTop_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_bias="0.98" />

</android.support.constraint.ConstraintLayout>